@@ -386,7 +386,7 @@ class OptionParser(commandline.OptionParser):
                            'herds', 'license', 'uris', 'files',
                            'slot', 'maintainers', 'restrict', 'repo',
                            'alldepends', 'path', 'environment', 'keywords',
-                           'homepage', 'fetchables')
+                           'homepage', 'fetchables', 'eapi')
 
         output = self.add_option_group('Output formatting')
         output.add_option(
